# Admin8

./: CMakeLists.txt  CMakelis.txt  README.md  aprende.txt  main.cpp  nlp_api.cpp  nlp_api.h  types.hpp  word_freq.txt
db/: db_manager.cpp
nlp/: classifier.cpp  classifier.hpp  context_info.hpp  context_memory.cpp  context_memory.hpp  corpus_stats.cpp  corpus_stats.hpp  hmm_tagger.cpp  hmm_tagger.hpp  morphology.cpp  morphology.hpp
tokenizer/: tokenizer.cpp
utils/: string_conv.cpp
